[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pianzi-kexing"
version = "0.1.0"
description = "骗子克星：合规优先的风险清单与开源去风险骨架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pianzi-kexing = "pianzi_kexing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
